--- a/mine_fragments_beg.ipynb
+++ b/mine_fragments_beg.ipynb
@@ -1479,6 +1479,404 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmas = [\"beg\",\"water\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([lemma=\"beg\"][]{0,10}[lemma=\"water\"])|([lemma=\"water\"][]{0,10}[lemma=\"beg\"])\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = create_contextual_query(lemmas,context_length=10)\n",
+    "print (query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domain_term = \"water\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fragments = {}\n",
+    "fragments['main_node'] = main_node\n",
+    "fragments['mid_node'] = domain_term\n",
+    "fragments['fragments'] = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22to%22%5D+%5B%22go%22%5D+%5B%22from%22%5D+%5B%22villager%22%5D+%5B%22to%22%5D+%5B%22villager%22%5D+%5B%22begging%22%5D+%5B%22for%22%5D+%5B%22a%22%5D+%5B%22little%22%5D+%5B%22bit%22%5D+%5B%22of%22%5D+%5B%22water%22%5D+%5B%22to%22%5D+%5B%22fill%22%5D+%5B%22the%22%5D+%5B%22canteen%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'to go from villager to villager begging for a little bit of water to fill the canteen . ', 'right': '', 'complete_match': 'to go from villager to villager begging for a little bit of water to fill the canteen . ', 'testimony_id': 'irn42018', 'shelfmark': ['USHMM RG-50.030*0586'], 'token_start': 27042, 'token_end': 27060}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_1 = {}\n",
+    "fragment_1['original_sentence'] = \"to go from villager to villager begging for a little bit of water to fill the canteen.\"\n",
+    "fragment_1['label']=\"(..) to go from villager to villager begging for a little bit of water to fill the canteen.\"\n",
+    "indices = find_sentence_id(fragment_1['original_sentence'])\n",
+    "fragment_1['start_sentence_index']=indices[0]\n",
+    "fragment_1['end_sentence_index']=indices[1]\n",
+    "fragment_1['media_offset'] = 0\n",
+    "fragment_1['media_index'] = 0\n",
+    "fragment_1['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22We%22%5D+%5B%22begged%22%5D+%5B%22a%22%5D+%5B%22little%22%5D+%5B%22waters%22%5D+%5B%22from%22%5D+%5B%22the%22%5D+%5B%22SS%22%5D+%5B%5D+%5B%22Nobody%22%5D+%5B%22was%22%5D+%5B%22hearing%22%5D+%5B%22us%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'We begged a little waters from the SS . Nobody was hearing us . ', 'right': '', 'complete_match': 'We begged a little waters from the SS . Nobody was hearing us . ', 'testimony_id': 'irn504715', 'shelfmark': ['USHMM RG-50.030*0224'], 'token_start': 5395, 'token_end': 5409}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_2 = {}\n",
+    "fragment_2['original_sentence'] = \"We begged a little waters from the SS. Nobody was hearing us.\"\n",
+    "fragment_2['label']=\"We begged a little waters from the SS. Nobody was hearing us.\"\n",
+    "indices = find_sentence_id(fragment_2['original_sentence'])\n",
+    "fragment_2['start_sentence_index']=indices[0]\n",
+    "fragment_2['end_sentence_index']=indices[1]\n",
+    "fragment_2['media_offset'] = 0\n",
+    "fragment_2['media_index'] = 0\n",
+    "fragment_2['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22You%22%5D+%5B%22could%22%5D+%5B%22hear%22%5D+%5B%22them%22%5D+%5B%22yell%22%5D+%5B%5D+%5B%22scream%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22beg%22%5D+%5B%22for%22%5D+%5B%22water%22%5D+%5B%5D+%5B%22beg%22%5D+%5B%22for%22%5D+%5B%5D+%5B%22for%22%5D+%5B%22help%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'You could hear them yell , scream , and beg for water , beg for , for help . ', 'right': '', 'complete_match': 'You could hear them yell , scream , and beg for water , beg for , for help . ', 'testimony_id': 'irn504722', 'shelfmark': ['USHMM RG-50.030*0240'], 'token_start': 19575, 'token_end': 19594}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_3 = {}\n",
+    "fragment_3['original_sentence'] = \"You could hear them yell, scream, and beg for water, beg for, for help.\"\n",
+    "fragment_3['label']=\"You could hear them yell, scream, and beg for water, beg for, for help.\"\n",
+    "indices = find_sentence_id(fragment_3['original_sentence'])\n",
+    "fragment_3['start_sentence_index']=indices[0]\n",
+    "fragment_3['end_sentence_index']=indices[1]\n",
+    "fragment_3['media_offset'] = 0\n",
+    "fragment_3['media_index'] = 0\n",
+    "fragment_3['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22The%22%5D+%5B%22only%22%5D+%5B%22thing%22%5D+%5B%22is%22%5D+%5B%5D+%5B%22we%22%5D+%5B%22were%22%5D+%5B%22so%22%5D+%5B%22thirsty%22%5D+%5B%5D%7B0%2C3%7D+%5B%22we%22%5D+%5B%22were%22%5D+%5B%5D+%5B%22hungry%22%5D+%5B%5D%7B0%2C3%7D+%5B%22we%22%5D+%5B%22begged%22%5D+%5B%22for%22%5D+%5B%22water%22%5D+%5B%5D+%5B%22We%22%5D+%5B%22never%22%5D+%5B%22got%22%5D+%5B%22water%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': \"The only thing is , we were so thirsty -- we were n't hungry -- we begged for water . We never got water . \", 'right': '', 'complete_match': \"The only thing is , we were so thirsty -- we were n't hungry -- we begged for water . We never got water . \", 'testimony_id': 'usc_shoah_26585', 'shelfmark': ['USC 26585'], 'token_start': 20593, 'token_end': 20618}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_4 = {}\n",
+    "fragment_4['original_sentence'] = \"The only thing is, we were so thirsty-- we weren't hungry-- we begged for water. We never got water.\"\n",
+    "fragment_4['label']= \"The only thing is, we were so thirsty-- we weren't hungry-- we begged for water. We never got water.\"\n",
+    "indices = find_sentence_id(fragment_4['original_sentence'])\n",
+    "fragment_4['start_sentence_index']=indices[0]\n",
+    "fragment_4['end_sentence_index']=indices[1]\n",
+    "fragment_4['media_offset'] = 0\n",
+    "fragment_4['media_index'] = 0\n",
+    "fragment_4['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22the%22%5D+%5B%22begging%22%5D+%5B%22of%22%5D+%5B%22the%22%5D+%5B%22sick%22%5D+%5B%22people%22%5D+%5B%22for%22%5D+%5B%22medication%22%5D+%5B%22or%22%5D+%5B%22water%22%5D+%5B%5D%7B0%2C3%7D+%5B%22that%22%5D+%5B%22was%22%5D+%5B%22unbearable%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'the begging of the sick people for medication or water -- that was unbearable . ', 'right': '', 'complete_match': 'the begging of the sick people for medication or water -- that was unbearable . ', 'testimony_id': 'usc_shoah_4753', 'shelfmark': ['USC 4753'], 'token_start': 5396, 'token_end': 5411}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_5 = {}\n",
+    "fragment_5['original_sentence'] = \"the begging of the sick people for medication or water-- that was unbearable.\"\n",
+    "fragment_5['label']= \"the begging of the sick people for medication or water-- that was unbearable.\"\n",
+    "indices = find_sentence_id(fragment_5['original_sentence'])\n",
+    "fragment_5['start_sentence_index']=indices[0]\n",
+    "fragment_5['end_sentence_index']=indices[1]\n",
+    "fragment_5['media_offset'] = 0\n",
+    "fragment_5['media_index'] = 0\n",
+    "fragment_5['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_testimonial_fragments(fragments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmas = [\"bread\",\"beg\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([lemma=\"bread\"][]{0,50}[lemma=\"beg\"])|([lemma=\"beg\"][]{0,50}[lemma=\"bread\"])\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = create_contextual_query(lemmas,context_length=50)\n",
+    "print (query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domain_term = \"bread\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fragments = {}\n",
+    "fragments['main_node'] = main_node\n",
+    "fragments['mid_node'] = domain_term\n",
+    "fragments['fragments'] = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22feel%22%5D+%5B%22like%22%5D+%5B%22it%22%5D+%5B%5D+%5B%22given%22%5D+%5B%22to%22%5D+%5B%22me%22%5D+%5B%22because%22%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22begging%22%5D+%5B%22bread%22%5D+%5B%5D+%5B%22I%22%5D+%5B%22was%22%5D+%5B%22begging%22%5D+%5B%22from%22%5D+%5B%22the%22%5D+%5B%22farmers%22%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': \"I feel like it 's given to me because I was begging bread . I was begging from the farmers \", 'right': '', 'complete_match': \"I feel like it 's given to me because I was begging bread . I was begging from the farmers \", 'testimony_id': 'usc_shoah_24615', 'shelfmark': ['USC 24615'], 'token_start': 27433, 'token_end': 27453}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_1 = {}\n",
+    "fragment_1['original_sentence'] = \"I feel like it's given to me because I was begging bread. I was begging from the farmers\"\n",
+    "fragment_1['label']=\"I feel like it's given to me because I was begging bread. I was begging from the farmers (..).\"\n",
+    "indices = find_sentence_id(fragment_1['original_sentence'])\n",
+    "fragment_1['start_sentence_index']=indices[0]\n",
+    "fragment_1['end_sentence_index']=indices[1]\n",
+    "fragment_1['media_offset'] = 0\n",
+    "fragment_1['media_index'] = 0\n",
+    "fragment_1['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22We%22%5D+%5B%22went%22%5D+%5B%22into%22%5D+%5B%22some%22%5D+%5B%22houses%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22we%22%5D+%5B%22begged%22%5D+%5B%22for%22%5D+%5B%22bread%22%5D+%5B%5D+%5B%22for%22%5D+%5B%22some%22%5D+%5B%22things%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'We went into some houses , and we begged for bread , for some things . ', 'right': '', 'complete_match': 'We went into some houses , and we begged for bread , for some things . ', 'testimony_id': 'usc_shoah_3952', 'shelfmark': ['USC 3952'], 'token_start': 23792, 'token_end': 23808}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_2 = {}\n",
+    "fragment_2['original_sentence'] = \"We went into some houses, and we begged for bread, for some things.\"\n",
+    "fragment_2['label']=\"We went into some houses, and we begged for bread, for some things.\"\n",
+    "indices = find_sentence_id(fragment_2['original_sentence'])\n",
+    "fragment_2['start_sentence_index']=indices[0]\n",
+    "fragment_2['end_sentence_index']=indices[1]\n",
+    "fragment_2['media_offset'] = 0\n",
+    "fragment_2['media_index'] = 0\n",
+    "fragment_2['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22then%22%5D+%5B%22I%22%5D+%5B%22would%22%5D+%5B%22come%22%5D+%5B%22to%22%5D+%5B%22a%22%5D+%5B%22village%22%5D+%5B%22and%22%5D+%5B%22beg%22%5D+%5B%22for%22%5D+%5B%22bread%22%5D+%5B%5D+%5B%22beg%22%5D+%5B%22for%22%5D+%5B%22food%22%5D+%5B%5D+%5B%22beg%22%5D+%5B%22for%22%5D+%5B%22a%22%5D+%5B%22place%22%5D+%5B%22to%22%5D+%5B%22stay%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'And then I would come to a village and beg for bread , beg for food , beg for a place to stay . ', 'right': '', 'complete_match': 'And then I would come to a village and beg for bread , beg for food , beg for a place to stay . ', 'testimony_id': 'usc_shoah_12455', 'shelfmark': ['USC 12455'], 'token_start': 2764, 'token_end': 2788}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_3 = {}\n",
+    "fragment_3['original_sentence'] = \"And then I would come to a village and beg for bread, beg for food, beg for a place to stay.\"\n",
+    "fragment_3['label']=\"And then I would come to a village and beg for bread, beg for food, beg for a place to stay.\"\n",
+    "indices = find_sentence_id(fragment_3['original_sentence'])\n",
+    "fragment_3['start_sentence_index']=indices[0]\n",
+    "fragment_3['end_sentence_index']=indices[1]\n",
+    "fragment_3['media_offset'] = 0\n",
+    "fragment_3['media_index'] = 0\n",
+    "fragment_3['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22I%22%5D+%5B%22used%22%5D+%5B%22to%22%5D+%5B%22go%22%5D+%5B%22to%22%5D+%5B%22the%22%5D+%5B%22farmers%22%5D+%5B%22and%22%5D+%5B%5D+%5B%22actually%22%5D+%5B%5D+%5B%22sometimes%22%5D+%5B%22beg%22%5D+%5B%5D+%5B%22Beg%22%5D+%5B%22for%22%5D+%5B%22a%22%5D+%5B%22piece%22%5D+%5B%22of%22%5D+%5B%22bread%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'I used to go to the farmers and , actually , sometimes beg . Beg for a piece of bread . ', 'right': '', 'complete_match': 'I used to go to the farmers and , actually , sometimes beg . Beg for a piece of bread . ', 'testimony_id': 'usc_shoah_23572', 'shelfmark': ['USC 23572'], 'token_start': 14456, 'token_end': 14477}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_4 = {}\n",
+    "fragment_4['original_sentence'] = \"I used to go to the farmers and, actually, sometimes beg. Beg for a piece of bread.\"\n",
+    "fragment_4['label']= \" I used to go to the farmers and, actually, sometimes beg. Beg for a piece of bread.\"\n",
+    "indices = find_sentence_id(fragment_4['original_sentence'])\n",
+    "fragment_4['start_sentence_index']=indices[0]\n",
+    "fragment_4['end_sentence_index']=indices[1]\n",
+    "fragment_4['media_offset'] = 0\n",
+    "fragment_4['media_index'] = 0\n",
+    "fragment_4['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8080/blacklab-server-2.1.0/lts/hits?patt=%5B%22And%22%5D+%5B%22I%22%5D+%5B%22went%22%5D+%5B%22to%22%5D+%5B%22the%22%5D+%5B%22civilians%22%5D+%5B%5D+%5B%22the%22%5D+%5B%22French%22%5D+%5B%22or%22%5D+%5B%22the%22%5D+%5B%22other%22%5D+%5B%22ones%22%5D+%5B%5D+%5B%22and%22%5D+%5B%22begged%22%5D+%5B%22them%22%5D+%5B%22for%22%5D+%5B%22bread%22%5D+%5B%22or%22%5D+%5B%22other%22%5D+%5B%22things%22%5D+%5B%5D&waitfortotal=true&outputformat=json&prettyprint=no&wordsaroundhit=0\n",
+      "{'left': '', 'match_word': 'And I went to the civilians , the French or the other ones , and begged them for bread or other things . ', 'right': '', 'complete_match': 'And I went to the civilians , the French or the other ones , and begged them for bread or other things . ', 'testimony_id': 'usc_shoah_6526', 'shelfmark': ['USC 6526'], 'token_start': 22842, 'token_end': 22865}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fragment_5 = {}\n",
+    "fragment_5['original_sentence'] = \"And I went to the civilians, the French or the other ones, and begged them for bread or other things.\"\n",
+    "fragment_5['label']= \"And I went to the civilians, the French or the other ones, and begged them for bread or other things.\"\n",
+    "indices = find_sentence_id(fragment_5['original_sentence'])\n",
+    "fragment_5['start_sentence_index']=indices[0]\n",
+    "fragment_5['end_sentence_index']=indices[1]\n",
+    "fragment_5['media_offset'] = 0\n",
+    "fragment_5['media_index'] = 0\n",
+    "fragment_5['testimony_id'] = indices[2]\n",
+    "fragments['fragments'].append(fragment_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_testimonial_fragments(fragments)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
